po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-22 19:12+0000\n"
+"PO-Revision-Date: 2017-01-23 17:49+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -277,7 +277,7 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email-to-Activity Processing"
-msgstr ""
+msgstr "Obrada: Email-ka-aktivnosti"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Used For?"
@@ -325,7 +325,7 @@ msgstr ""
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "View System Default Message Template"
-msgstr ""
+msgstr "Vidi šablon za podrazumevanu sistemsku poruku"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "The Message Template '%1' has been saved."
@@ -384,7 +384,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Options.php
 msgid "Class Name"
-msgstr ""
+msgstr "Ime klase"
 
 #: CRM/Admin/Form/Options.php
 msgid "Contacts AND Cases"
@@ -419,7 +419,7 @@ msgstr "Ova oznaka već postoji u bazi podataka za odabrani tip kontakta."
 
 #: CRM/Admin/Form/Options.php
 msgid "Please follow the proper format for From Email Address"
-msgstr ""
+msgstr "Pratite važeći format za OD email adresu"
 
 #: CRM/Admin/Form/Options.php
 msgid "Selected %1 type has been deleted."
@@ -629,7 +629,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Populate counties"
-msgstr ""
+msgstr "Popuni pokrajine"
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "CiviCampaign Component Settings"
@@ -853,7 +853,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable CiviMail to create activities on delivery"
-msgstr ""
+msgstr "Uključi mogućnost CiviMaila da kreira aktivnosti pri dostavi"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Disable check for mandatory tokens"
@@ -1262,7 +1262,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "Mailer Batch Limit"
-msgstr ""
+msgstr "Limit Mailer serije"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "Mailer Throttle Time"
@@ -1314,7 +1314,7 @@ msgstr "Mapiranje zahteva PHP verziju 5 ili više"
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Misc (Undelete, PDFs, Limits, Logging, Captcha, etc.)"
-msgstr ""
+msgstr "Ostalo (PDFovi, limiti, logovanje, Captcha, itd.)"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
@@ -1323,7 +1323,7 @@ msgstr "Prijavljivanje"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "Path to wkhtmltopdf executable"
-msgstr ""
+msgstr "Putanja do wkhtmltopdf izvršne datoteke"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "Public Key"
@@ -1413,11 +1413,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Search.php
 msgid "Default Contact Search Profile"
-msgstr ""
+msgstr "Podrazumevani profil za pretragu kontakata"
 
 #: CRM/Admin/Form/Setting/Search.php
 msgid "Contact Reference Options"
-msgstr ""
+msgstr "Opcije za referenciranje kontakata"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "mail()"
@@ -1526,7 +1526,7 @@ msgstr "Podešavanja %1 integracija"
 
 #: CRM/Admin/Form/Setting/UF.php
 msgid "%1 Users Table Name"
-msgstr ""
+msgstr "%1 ime tabele korisnika"
 
 #: CRM/Admin/Form/Setting/UpdateConfigBackend.php
 msgid "Settings - Cleanup Caches and Update Paths"
@@ -2627,7 +2627,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Navigation.hlp
 msgid "Separators"
-msgstr ""
+msgstr "Separatori"
 
 #: templates/CRM/Admin/Form/Navigation.hlp
 msgid ""
@@ -2744,13 +2744,13 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Options.tpl
 msgid "The class name which implements this functionality."
-msgstr ""
+msgstr "Ime klase koja implementira ovu funkciju."
 
 #: templates/CRM/Admin/Form/Options.tpl
 msgid ""
 "Description is included at the top of the activity edit and view pages for "
 "this type of activity."
-msgstr ""
+msgstr "Opis se pojavljuje na vrhu stranica za uređivanje i pregled aktivnosti za ovaj tip aktivnosti."
 
 #: templates/CRM/Admin/Form/ParticipantStatusType.tpl
 msgid "New Participant Status"
@@ -2806,7 +2806,7 @@ msgstr "Novi procesor uplate"
 msgid ""
 "WARNING: Deleting this Payment Processor may result in some transaction "
 "pages being rendered inactive."
-msgstr ""
+msgstr "UPOZORENJE: Brisanjem ovog procesora uplata neke stranice za transakcije mogu postati neaktivne."
 
 #: templates/CRM/Admin/Form/PaymentProcessor.tpl
 msgid ""
@@ -2878,7 +2878,7 @@ msgstr ""
 msgid ""
 "Use the %1 token for state/province abbreviation or %2 for full "
 "state/province name."
-msgstr ""
+msgstr "Koristite token %1 za skraćenicu država/pokrajina ili %2 za puno ime države/pokrajine"
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid "Add spaces or punctuation to layout by surrounding them with brackets."
@@ -2945,11 +2945,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid "State or province <strong>abbreviation</strong>."
-msgstr ""
+msgstr "Država ili pokrajina <strong>skraćenica</strong>."
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid "State or province <strong>full name</strong>."
-msgstr ""
+msgstr "Država ili pokrajina <strong>puno ime</strong>."
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid "Postal code."
@@ -3370,11 +3370,11 @@ msgstr "minut, sa nulom ('00'..'60')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "lowercase ante/post meridiem ('am', 'pm')"
-msgstr ""
+msgstr "ante/post meridiem malim slovima ('am', 'pm')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "uppercase ante/post meridiem ('AM', 'PM')"
-msgstr ""
+msgstr "ante/post meridiem velikim slovima ('AM', 'PM')"
 
 #: templates/CRM/Admin/Form/Setting/Date.hlp
 msgid "year as a decimal number including the century ('2015')"
@@ -3556,7 +3556,7 @@ msgstr "Dodaj novi jezik ovoj instalaciji."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "If checked, CiviCRM will follow CMS language changes."
-msgstr ""
+msgstr "Ukoliko je ova opcija čekirana, CiviCRM će pratiti promene u jeziku CMS-a."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
@@ -3809,7 +3809,7 @@ msgstr ""
 msgid ""
 "Alert site admins about security advisories. <strong>Strongly "
 "recommended.</strong>"
-msgstr ""
+msgstr "Upozori administratore sajta o savetima vezanim za bezbednost.  <strong>Preporučeno.</strong>"
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid "Alert site admins about all new CiviCRM releases."
@@ -3819,7 +3819,7 @@ msgstr ""
 msgid ""
 "When enabled, \"empowered by CiviCRM\" is displayed at the bottom of public "
 "forms."
-msgstr ""
+msgstr "Kada je uključeno \"empowered by CiviCRM\" će biti ispisano na dnu stranica sa javnim formularima."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -4044,11 +4044,11 @@ msgstr "Ukoliko vaš SMTP server traži autentikaciju, unesite korisničko ime i
 
 #: templates/CRM/Admin/Form/Setting/Smtp.tpl
 msgid "Sendmail Configuration"
-msgstr ""
+msgstr "Sendmail konfiguracija"
 
 #: templates/CRM/Admin/Form/Setting/Smtp.tpl
 msgid "Enter the Sendmail Path. EXAMPLE: /usr/sbin/sendmail"
-msgstr ""
+msgstr "Unesite Sendmail putanju. Primer: /usr/sbin/sendmail"
 
 #: templates/CRM/Admin/Form/Setting/Smtp.tpl
 msgid ""
@@ -4434,7 +4434,7 @@ msgstr "Potvrdi %1"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Explorer"
-msgstr ""
+msgstr "Explorer"
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Examples"
@@ -4554,7 +4554,7 @@ msgstr "Kontrola pristupa - Drupal"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "Grant access to CiviCRM components and other CiviCRM permissions."
-msgstr ""
+msgstr "Obezbedi pristup CiviCRM komponentama i ostalim CiviCRM dozvolama."
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "Joomla Access Control"
@@ -4572,7 +4572,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "1. Manage Roles"
-msgstr ""
+msgstr "1. Menadžment uloga"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -4614,7 +4614,7 @@ msgstr "Da li ste registrovali ovaj sajt na CiviCRM.org? Ako ne, pomozite da oja
 
 #: templates/CRM/Admin/Page/Admin.tpl
 msgid "plus sign"
-msgstr ""
+msgstr "znak plus"
 
 #: templates/CRM/Admin/Page/Admin.tpl
 msgid ""
@@ -4684,7 +4684,7 @@ msgstr "Pregled i uređivanje kontakata"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Display Preferences"
-msgstr ""
+msgstr "Podešavanja prikaza"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 #: templates/CRM/Admin/Page/Setting.tpl
@@ -4869,11 +4869,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Online event registration and participant tracking."
-msgstr ""
+msgstr "Onlajn registracija za događaj i praćenje učesnika."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Online signup and membership management."
-msgstr ""
+msgstr "Onlajn prijava za članstvo i menadžment članstava."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Personalized email blasts and newsletters."
@@ -4911,7 +4911,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ContactType.hlp
 msgid "Contact Type Icon"
-msgstr ""
+msgstr "Ikona za tip kontakta"
 
 #: templates/CRM/Admin/Page/ContactType.hlp
 msgid ""
@@ -5126,7 +5126,7 @@ msgstr "Ovaj zakazani posao nema log unosa."
 
 #: templates/CRM/Admin/Page/JobLog.tpl
 msgid "There are no scheduled job log entries."
-msgstr ""
+msgstr "Nema log unosa za zakazane poslove."
 
 #: templates/CRM/Admin/Page/LabelFormats.tpl
 msgid ""
@@ -5945,11 +5945,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "This is the TEST %1 used solely for testing."
-msgstr ""
+msgstr "Ovo je TEST %1 i koristi se samo za testiranje."
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid "Use %1 unless otherwise advised by eWAY."
-msgstr ""
+msgstr "Korisit %1 osim u slučaju drugačijih instrukcija od eWAY-a."
 
 #: templates/CRM/Admin/Page/PaymentProcessor.hlp
 msgid ""
