--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-22 22:36+0000\n"
+"PO-Revision-Date: 2017-01-23 08:00+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -522,7 +522,7 @@ msgstr "Obriši dodelu ACL uloga"
 
 #: CRM/ACL/Page/EntityRole.php
 msgid "Assign Users to Roles"
-msgstr ""
+msgstr "Dodeli korisnike ulogama"
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/Selector/Search.php
 msgid "(recipients)"
