po: update po/pt_BR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -31,7 +31,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-23 05:28+0000\n"
+"PO-Revision-Date: 2017-01-23 07:13+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -4268,17 +4268,17 @@ msgstr "Isso irá suprimir as notificações sobre todas as atualizações dispo
 
 #: templates/CRM/Admin/Form/Setting/versionCheckOptions.js
 msgid "Notifications will resume when a new security advisory is published."
-msgstr ""
+msgstr "As notificações irão retornar quando um novo aviso de segurança for publicado."
 
 #: templates/CRM/Admin/Form/Setting/versionCheckOptions.js
 msgid ""
 "Warning: Do this only if you have already taken alternate steps to ensure "
 "your site is secure."
-msgstr ""
+msgstr "Atenção: Só faça isso se você já tomou as medidas alternativas para assegurar que seu site está seguro."
 
 #: templates/CRM/Admin/Form/Setting/versionCheckOptions.js
 msgid "Notifications will resume when a new release is published."
-msgstr ""
+msgstr "As notificações retornarão quando um novo lançamento for publicado."
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid ""
@@ -6635,25 +6635,25 @@ msgstr ""
 msgid ""
 "A \"WYSIWYG\" (What You See Is What You Get) is a rich-text editor, like a "
 "mini word-processor, for editing HTML content in CiviCRM."
-msgstr ""
+msgstr "Um editor de texto \"WYSIWYG\" (What You See Is What You Get) é como um mini processador de texto, para editar o conteúdo HTML no CiviCRM."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
 "Select 'CKEditor' for the built-in WYSIWYG option. You can customize the "
 "toolbar buttons and other settings by clicking \"Configure CKEditor.\""
-msgstr ""
+msgstr "Selecione 'CKEditor' para a opção inclusa de WYSIWYG. Você poderá personalizar a barra de botões e outros ajustes clicando \"Configurar CKEditor.\""
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
 "Select 'Textarea' if you want users to type text and/or HTML code into plain"
 " text fields."
-msgstr ""
+msgstr "Selecione 'Área de Texto' se quiser que os usuários digitem texto e/ou código em um campo de texto puro."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
 "Other WYSIWYG editors are available for download from the <a %1>CiviCRM "
 "Extension Directory</a>."
-msgstr ""
+msgstr "Outros editores WYSIWYG estão disponíveis para download a partir do <a %1>Diretório de Extensões CiviCRM</a>."
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
@@ -6678,7 +6678,7 @@ msgstr "valor monetário, formatado de acordo com Localização Monetária"
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid ""
 "For a full list of options see the php <a %1>money_format documentation</a>."
-msgstr ""
+msgstr "Para uma lista completa de opção veja a <a %1>documentação de money_format documentation</a> do php."
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Format for displaying monetary amounts with currency symbol."
@@ -6714,7 +6714,7 @@ msgstr ""
 msgid ""
 "(Multilingual support currently cannot be enabled on installations with "
 "enabled logging.)"
-msgstr ""
+msgstr "(Suporte a multi-línguas não pode ser ativado atualmente em instalações com logging acionado.)"
 
 #: templates/CRM/Admin/Form/Setting/Mail.tpl
 msgid ""
@@ -6729,7 +6729,7 @@ msgstr ""
 msgid ""
 "If enabled, CiviCRM will allow users to submit profiles from external sites."
 " This is disabled by default to limit abuse."
-msgstr ""
+msgstr "Se habilitado, o CiviCRM permitirá aos usuários submeter perfil a partir de sites externos. Isto é desabilitado por padrão para evitar abusos."
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
@@ -6796,38 +6796,38 @@ msgstr "Variáveis de URL"
 msgid ""
 "These settings define the URLs used to access CiviCRM resources (CSS files, "
 "Javascript files, images, etc.)."
-msgstr ""
+msgstr "Estas configurações definem as URLs usadas para acessar os recursos do CiviCRM (arquivos CSS, Javascript, imagens, etc)."
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid "You may configure these settings using absolute URLs or URL variables."
-msgstr ""
+msgstr "Você pode ajustar estas configurações usando URLs absolutas ou variáveis de URL."
 
 #: templates/CRM/Admin/Form/WordReplacements.hlp
 msgid ""
 "Change all occurrences of a word or phrase in CiviCRM screens (e.g. replace "
 "all occurrences of 'Contribution' with 'Donation')."
-msgstr ""
+msgstr "Altera todas as ocorrências de uma palavras ou frase nas telas do CiviCRM (ex.: altera todas as ocorrências de 'Contribuição' com 'Doação')."
 
 #: templates/CRM/Admin/Form/WordReplacements.tpl
 msgid ""
 "Use <strong>Word Replacements</strong> to change all occurrences of a word "
 "or phrase in CiviCRM screens (e.g. replace all occurrences of 'Contribution'"
 " with 'Donation')."
-msgstr ""
+msgstr "Use <strong> Palavra Substituição</strong> para alterar todas as ocorrências de uma palavra ou frase em telas CiviCRM (por exemplo, substituir todas as ocorrências de \"contribuição\" com \"doação\")."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Api Chaining"
-msgstr ""
+msgstr "Encadeamento de Api."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Chains allow you to execute api calls on the results of this one."
-msgstr ""
+msgstr "Encadeamento permite a execução de chamadas Api como resultado desta."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Example: When creating a contact, you can chain the Email.create api to add "
 "email addresses for them."
-msgstr ""
+msgstr "Exemplo: Quando criando um contato, você pode encadear a api Email.create para adicionar um endereço de email a eles."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
@@ -6837,12 +6837,12 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Api Joins"
-msgstr ""
+msgstr "Junções de Api"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "Join this api call to return values from or filter on a related entity."
-msgstr ""
+msgstr "Junte esta chamada Api para retornar seus valores ou filtrá-los por um entidade relacionada."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
@@ -6874,11 +6874,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.tpl
 msgid "Join on:"
-msgstr ""
+msgstr "Juntar em:"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Skin"
-msgstr ""
+msgstr "Superfície"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Plugins"
@@ -6906,7 +6906,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Cleanup reports menu"
-msgstr ""
+msgstr "Limpar menu de relatórios"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid ""
