po: update po/sr_RS@latin/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/drupal-civicrm.po
+++ b/po/sr_RS@latin/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2017-01-22 20:02+0000\n"
+"PO-Revision-Date: 2017-01-23 11:24+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -294,7 +294,7 @@ msgstr "Adresa"
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 #: drupal/modules/civicrm_engage/Engage/Report/Form/CallList.php
 msgid "State/Province"
-msgstr ""
+msgstr "Država/pokrajina"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 #: drupal/modules/civicrm_engage/Engage/Report/Form/CallList.php
@@ -824,7 +824,7 @@ msgstr "Podtip kontakta"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Sub-type for the Contact"
-msgstr ""
+msgstr "Podtip za ovaj kontakt"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Address"
@@ -957,7 +957,7 @@ msgstr "Email adresa"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Phone Details"
-msgstr ""
+msgstr "CiviCRM detalji telefona"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is Primary Phone"
