po: update po/pt_BR/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/batch.po
+++ b/po/pt_BR/batch.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Diego Viegas <diego.viegas@dotpro.com.br>, 2012
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2017
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Edson Duarte <edson@artsoft.com.br>, 2016
 # Guilherme Brein <guilherme@fisesp.org.br>, 2015
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-17 21:29+0000\n"
-"Last-Translator: Edson Duarte <edson@artsoft.com.br>\n"
+"PO-Revision-Date: 2017-01-23 07:24+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -225,21 +225,21 @@ msgstr "Nenhum Lote de Inserção de Dados foi criado para este site."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Method"
-msgstr ""
+msgstr "Método de Pagamento de Lote"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch ID"
-msgstr ""
+msgstr "ID da EntidadeLote"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch Table"
-msgstr ""
+msgstr "Tabela da EntidadeLote"
 
 #: CRM/Batch/Form/Entry.php
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple records."
-msgstr ""
+msgstr "O tipo de campo Arquivo ou Autocompletar no perfil selecionado não é suportado para Atualizar múltiplos registros."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Transaction ID must be unique within the database"
@@ -249,15 +249,15 @@ msgstr "A \"Transaction ID\" deve ser única no banco de dados"
 msgid ""
 "Click Validate & Process below when you've entered all items for the batch. "
 "You can also Save & Continue Later at any time."
-msgstr ""
+msgstr "Clique Validar e Processar abaixo quando tiver inserido todos os itens para seu lote. Você pode também Salvar & Continuar a qualquer momento."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Add, remove or change the order of columns by editing the corresponding <a "
 "href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
-msgstr ""
+msgstr "Adicione, remova ou mude a ordem de colunas editando o <a href=\"%1\" target=\"_blank\">perfil de Atualização em Lote</a> corresponding."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Custom fields and a Personal Campaign Page field can be added if needed."
-msgstr ""
+msgstr "Campos Personalizados e um campo de Página de Campanha Pessoal podem ser adicionados."
