po: update po/sr_RS@latin/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/provinces.po
+++ b/po/sr_RS@latin/provinces.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 15:44+0000\n"
+"PO-Revision-Date: 2017-01-23 15:49+0000\n"
 "Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -11965,7 +11965,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Brokopondo"
-msgstr ""
+msgstr "Brokopondo"
 
 msgctxt "province"
 msgid "Commewijne"
@@ -11973,7 +11973,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Coronie"
-msgstr ""
+msgstr "Koroni"
 
 msgctxt "province"
 msgid "Marowijne"
@@ -11981,115 +11981,115 @@ msgstr ""
 
 msgctxt "province"
 msgid "Nickerie"
-msgstr ""
+msgstr "Nikeri"
 
 msgctxt "province"
 msgid "Paramaribo"
-msgstr ""
+msgstr "Paramaribo"
 
 msgctxt "province"
 msgid "Saramacca"
-msgstr ""
+msgstr "Saramaka"
 
 msgctxt "province"
 msgid "Sipaliwini"
-msgstr ""
+msgstr "Sipalivini"
 
 msgctxt "province"
 msgid "Wanica"
-msgstr ""
+msgstr "Vanika"
 
 msgctxt "province"
 msgid "Principe"
-msgstr ""
+msgstr "Principe"
 
 msgctxt "province"
 msgid "Sao Tome"
-msgstr ""
+msgstr "Sao Tome"
 
 msgctxt "province"
 msgid "Ahuachapan"
-msgstr ""
+msgstr "Avačapan"
 
 msgctxt "province"
 msgid "Cabanas"
-msgstr ""
+msgstr "Kabanjas"
 
 msgctxt "province"
 msgid "Cuscatlan"
-msgstr ""
+msgstr "Kuskatlan"
 
 msgctxt "province"
 msgid "Chalatenango"
-msgstr ""
+msgstr "Čalatenango"
 
 msgctxt "province"
 msgid "Morazan"
-msgstr ""
+msgstr "Morasan"
 
 msgctxt "province"
 msgid "San Miguel"
-msgstr ""
+msgstr "San Migel"
 
 msgctxt "province"
 msgid "San Salvador"
-msgstr ""
+msgstr "San Salvador"
 
 msgctxt "province"
 msgid "Santa Ana"
-msgstr ""
+msgstr "Santa Ana"
 
 msgctxt "province"
 msgid "San Vicente"
-msgstr ""
+msgstr "San Visente"
 
 msgctxt "province"
 msgid "Sonsonate"
-msgstr ""
+msgstr "Sonsonate"
 
 msgctxt "province"
 msgid "Usulutan"
-msgstr ""
+msgstr "Usulutan"
 
 msgctxt "province"
 msgid "Al Hasakah"
-msgstr ""
+msgstr "Hasaka"
 
 msgctxt "province"
 msgid "Al Ladhiqiyah"
-msgstr ""
+msgstr "Latakija"
 
 msgctxt "province"
 msgid "Al Qunaytirah"
-msgstr ""
+msgstr "Kunejtra"
 
 msgctxt "province"
 msgid "Ar Raqqah"
-msgstr ""
+msgstr "Raka"
 
 msgctxt "province"
 msgid "As Suwayda'"
-msgstr ""
+msgstr "Suvajda"
 
 msgctxt "province"
 msgid "Dar'a"
-msgstr ""
+msgstr "Dara"
 
 msgctxt "province"
 msgid "Dayr az Zawr"
-msgstr ""
+msgstr "Dajr ez Zaur"
 
 msgctxt "province"
 msgid "Dimashq"
-msgstr ""
+msgstr "Damask"
 
 msgctxt "province"
 msgid "Halab"
-msgstr ""
+msgstr "Alep"
 
 msgctxt "province"
 msgid "Hamah"
-msgstr ""
+msgstr "Hama"
 
 msgctxt "province"
 msgid "Jim'"
@@ -12097,7 +12097,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Idlib"
-msgstr ""
+msgstr "Idlib"
 
 msgctxt "province"
 msgid "Rif Dimashq"
@@ -12105,67 +12105,67 @@ msgstr ""
 
 msgctxt "province"
 msgid "Tarts"
-msgstr ""
+msgstr "Tartus"
 
 msgctxt "province"
 msgid "Hhohho"
-msgstr ""
+msgstr "Hoho"
 
 msgctxt "province"
 msgid "Lubombo"
-msgstr ""
+msgstr "Lubombo"
 
 msgctxt "province"
 msgid "Manzini"
-msgstr ""
+msgstr "Manzini"
 
 msgctxt "province"
 msgid "Shiselweni"
-msgstr ""
+msgstr "Šiselveni"
 
 msgctxt "province"
 msgid "Batha"
-msgstr ""
+msgstr "Bata"
 
 msgctxt "province"
 msgid "Biltine"
-msgstr ""
+msgstr "Biltin"
 
 msgctxt "province"
 msgid "Borkou-Ennedi-Tibesti"
-msgstr ""
+msgstr "Borku-Enedi-Tibesti"
 
 msgctxt "province"
 msgid "Chari-Baguirmi"
-msgstr ""
+msgstr "Šari-Bagirmi"
 
 msgctxt "province"
 msgid "Guera"
-msgstr ""
+msgstr "Gera"
 
 msgctxt "province"
 msgid "Kanem"
-msgstr ""
+msgstr "Kanem"
 
 msgctxt "province"
 msgid "Lac"
-msgstr ""
+msgstr "Lak"
 
 msgctxt "province"
 msgid "Logone-Occidental"
-msgstr ""
+msgstr "Zapadni Logon"
 
 msgctxt "province"
 msgid "Logone-Oriental"
-msgstr ""
+msgstr "Istočni Logon"
 
 msgctxt "province"
 msgid "Mayo-Kebbi"
-msgstr ""
+msgstr "Istočni Majo-Kebi"
 
 msgctxt "province"
 msgid "Moyen-Chari"
-msgstr ""
+msgstr "Srednji Šari"
 
 msgctxt "province"
 msgid "Ouaddai"
@@ -12173,11 +12173,11 @@ msgstr ""
 
 msgctxt "province"
 msgid "Salamat"
-msgstr ""
+msgstr "Salamat"
 
 msgctxt "province"
 msgid "Tandjile"
-msgstr ""
+msgstr "Tandžile"
 
 msgctxt "province"
 msgid "Kara"
@@ -12185,11 +12185,11 @@ msgstr ""
 
 msgctxt "province"
 msgid "Maritime (Region)"
-msgstr ""
+msgstr "Maritim (Region)"
 
 msgctxt "province"
 msgid "Savannes"
-msgstr ""
+msgstr "Savan"
 
 msgctxt "province"
 msgid "Krung Thep Maha Nakhon Bangkok"
@@ -12197,23 +12197,23 @@ msgstr ""
 
 msgctxt "province"
 msgid "Phatthaya"
-msgstr ""
+msgstr "Pataja"
 
 msgctxt "province"
 msgid "Amnat Charoen"
-msgstr ""
+msgstr "Amnat Čaroen"
 
 msgctxt "province"
 msgid "Ang Thong"
-msgstr ""
+msgstr "Ang Tong"
 
 msgctxt "province"
 msgid "Buri Ram"
-msgstr ""
+msgstr "Buri Ram"
 
 msgctxt "province"
 msgid "Chachoengsao"
-msgstr ""
+msgstr "Čečengsau"
 
 msgctxt "province"
 msgid "Chai Nat"
@@ -12225,19 +12225,19 @@ msgstr ""
 
 msgctxt "province"
 msgid "Chanthaburi"
-msgstr ""
+msgstr "Čantaburi"
 
 msgctxt "province"
 msgid "Chiang Mai"
-msgstr ""
+msgstr "Čijang Maj"
 
 msgctxt "province"
 msgid "Chiang Rai"
-msgstr ""
+msgstr "Čiangraj"
 
 msgctxt "province"
 msgid "Chon Buri"
-msgstr ""
+msgstr "Čonburi"
 
 msgctxt "province"
 msgid "Chumphon"
@@ -12245,7 +12245,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Kalasin"
-msgstr ""
+msgstr "Kalasin"
 
 msgctxt "province"
 msgid "Kamphasng Phet"
@@ -12253,7 +12253,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Kanchanaburi"
-msgstr ""
+msgstr "Kančanaburi"
 
 msgctxt "province"
 msgid "Khon Kaen"
@@ -12265,7 +12265,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Lampang"
-msgstr ""
+msgstr "Lampang"
 
 msgctxt "province"
 msgid "Lamphun"
@@ -12277,7 +12277,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Lop Buri"
-msgstr ""
+msgstr "Lopburi"
 
 msgctxt "province"
 msgid "Mae Hong Son"
@@ -12289,19 +12289,19 @@ msgstr ""
 
 msgctxt "province"
 msgid "Mukdahan"
-msgstr ""
+msgstr "Mukdahan"
 
 msgctxt "province"
 msgid "Nakhon Nayok"
-msgstr ""
+msgstr "Nakon Najok"
 
 msgctxt "province"
 msgid "Nakhon Pathom"
-msgstr ""
+msgstr "Nakon Patom"
 
 msgctxt "province"
 msgid "Nakhon Phanom"
-msgstr ""
+msgstr "Nakon Fanom"
 
 msgctxt "province"
 msgid "Nakhon Ratchasima"
@@ -12513,19 +12513,19 @@ msgstr ""
 
 msgctxt "province"
 msgid "Ahal"
-msgstr ""
+msgstr "Ahal"
 
 msgctxt "province"
 msgid "Balkan"
-msgstr ""
+msgstr "Balkan"
 
 msgctxt "province"
 msgid "Dasoguz"
-msgstr ""
+msgstr "Dašoguz"
 
 msgctxt "province"
 msgid "Lebap"
-msgstr ""
+msgstr "Lebap"
 
 msgctxt "province"
 msgid "Mary"
@@ -12533,23 +12533,23 @@ msgstr ""
 
 msgctxt "province"
 msgid "Béja"
-msgstr ""
+msgstr "Beža"
 
 msgctxt "province"
 msgid "Ben Arous"
-msgstr ""
+msgstr "Ben Arus"
 
 msgctxt "province"
 msgid "Bizerte"
-msgstr ""
+msgstr "Bizerta"
 
 msgctxt "province"
 msgid "Gabès"
-msgstr ""
+msgstr "Gabes"
 
 msgctxt "province"
 msgid "Gafsa"
-msgstr ""
+msgstr "Gafska"
 
 msgctxt "province"
 msgid "Jendouba"
@@ -12557,7 +12557,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Kairouan"
-msgstr ""
+msgstr "Keruan"
 
 msgctxt "province"
 msgid "Rasserine"
@@ -12565,7 +12565,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Kebili"
-msgstr ""
+msgstr "Kebili"
 
 msgctxt "province"
 msgid "L'Ariana"
@@ -12577,15 +12577,15 @@ msgstr ""
 
 msgctxt "province"
 msgid "Mahdia"
-msgstr ""
+msgstr "Mahdija"
 
 msgctxt "province"
 msgid "La Manouba"
-msgstr ""
+msgstr "Manuba"
 
 msgctxt "province"
 msgid "Medenine"
-msgstr ""
+msgstr "Medenin"
 
 msgctxt "province"
 msgid "Moneatir"
@@ -12593,51 +12593,51 @@ msgstr ""
 
 msgctxt "province"
 msgid "Naboul"
-msgstr ""
+msgstr "Nabil"
 
 msgctxt "province"
 msgid "Sfax"
-msgstr ""
+msgstr "Sfaks"
 
 msgctxt "province"
 msgid "Sidi Bouxid"
-msgstr ""
+msgstr "Sidi Buzid"
 
 msgctxt "province"
 msgid "Siliana"
-msgstr ""
+msgstr "Siliana"
 
 msgctxt "province"
 msgid "Sousse"
-msgstr ""
+msgstr "Sus"
 
 msgctxt "province"
 msgid "Tataouine"
-msgstr ""
+msgstr "Tatauin"
 
 msgctxt "province"
 msgid "Tozeur"
-msgstr ""
+msgstr "Tauzar"
 
 msgctxt "province"
 msgid "Tunis"
-msgstr ""
+msgstr "Tunis"
 
 msgctxt "province"
 msgid "Zaghouan"
-msgstr ""
+msgstr "Zaguan"
 
 msgctxt "province"
 msgid "Adana"
-msgstr ""
+msgstr "Adana"
 
 msgctxt "province"
 msgid "Ad yaman"
-msgstr ""
+msgstr "Adijaman"
 
 msgctxt "province"
 msgid "Afyon"
-msgstr ""
+msgstr "Afjon"
 
 msgctxt "province"
 msgid "Ag r"
@@ -12645,75 +12645,75 @@ msgstr ""
 
 msgctxt "province"
 msgid "Aksaray"
-msgstr ""
+msgstr "Askaraj"
 
 msgctxt "province"
 msgid "Amasya"
-msgstr ""
+msgstr "Adijaman"
 
 msgctxt "province"
 msgid "Ankara"
-msgstr ""
+msgstr "Ankara"
 
 msgctxt "province"
 msgid "Antalya"
-msgstr ""
+msgstr "Antalija"
 
 msgctxt "province"
 msgid "Ardahan"
-msgstr ""
+msgstr "Ardahan"
 
 msgctxt "province"
 msgid "Artvin"
-msgstr ""
+msgstr "Artvin"
 
 msgctxt "province"
 msgid "Aydin"
-msgstr ""
+msgstr "Ajdin"
 
 msgctxt "province"
 msgid "Bal kesir"
-msgstr ""
+msgstr "Balikesir"
 
 msgctxt "province"
 msgid "Bartin"
-msgstr ""
+msgstr "Bartin"
 
 msgctxt "province"
 msgid "Batman"
-msgstr ""
+msgstr "Betmen"
 
 msgctxt "province"
 msgid "Bayburt"
-msgstr ""
+msgstr "Bajburt"
 
 msgctxt "province"
 msgid "Bilecik"
-msgstr ""
+msgstr "Bilecik"
 
 msgctxt "province"
 msgid "Bingol"
-msgstr ""
+msgstr "Bingol"
 
 msgctxt "province"
 msgid "Bitlis"
-msgstr ""
+msgstr "Bitlis"
 
 msgctxt "province"
 msgid "Bolu"
-msgstr ""
+msgstr "Bolu"
 
 msgctxt "province"
 msgid "Burdur"
-msgstr ""
+msgstr "Burdur"
 
 msgctxt "province"
 msgid "Bursa"
-msgstr ""
+msgstr "Bursa"
 
 msgctxt "province"
 msgid "Canakkale"
-msgstr ""
+msgstr "Čanakale"
 
 msgctxt "province"
 msgid "Cankir"
@@ -12721,51 +12721,51 @@ msgstr ""
 
 msgctxt "province"
 msgid "Corum"
-msgstr ""
+msgstr "Čorum"
 
 msgctxt "province"
 msgid "Denizli"
-msgstr ""
+msgstr "Denizli"
 
 msgctxt "province"
 msgid "Diyarbakir"
-msgstr ""
+msgstr "Dijarbakir"
 
 msgctxt "province"
 msgid "Duzce"
-msgstr ""
+msgstr "Duzdže"
 
 msgctxt "province"
 msgid "Edirne"
-msgstr ""
+msgstr "Jedrene"
 
 msgctxt "province"
 msgid "Elazig"
-msgstr ""
+msgstr "Elazig"
 
 msgctxt "province"
 msgid "Erzincan"
-msgstr ""
+msgstr "Erzindžan"
 
 msgctxt "province"
 msgid "Erzurum"
-msgstr ""
+msgstr "Erzurum"
 
 msgctxt "province"
 msgid "Eskis'ehir"
-msgstr ""
+msgstr "Eskišehir"
 
 msgctxt "province"
 msgid "Gaziantep"
-msgstr ""
+msgstr "Gazijantep"
 
 msgctxt "province"
 msgid "Giresun"
-msgstr ""
+msgstr "Giresun"
 
 msgctxt "province"
 msgid "Gms'hane"
-msgstr ""
+msgstr "Gjumušhane"
 
 msgctxt "province"
 msgid "Hakkari"
@@ -12773,15 +12773,15 @@ msgstr ""
 
 msgctxt "province"
 msgid "Hatay"
-msgstr ""
+msgstr "Hataj"
 
 msgctxt "province"
 msgid "Igidir"
-msgstr ""
+msgstr "Igdir"
 
 msgctxt "province"
 msgid "Isparta"
-msgstr ""
+msgstr "Isparta"
 
 msgctxt "province"
 msgid "Icel"
@@ -12789,79 +12789,79 @@ msgstr ""
 
 msgctxt "province"
 msgid "Istanbul"
-msgstr ""
+msgstr "Istanbul"
 
 msgctxt "province"
 msgid "Izmir"
-msgstr ""
+msgstr "Izmir"
 
 msgctxt "province"
 msgid "Kahramanmaras"
-msgstr ""
+msgstr "Karamanmaraš"
 
 msgctxt "province"
 msgid "Karabk"
-msgstr ""
+msgstr "Karabuk"
 
 msgctxt "province"
 msgid "Karaman"
-msgstr ""
+msgstr "Karaman"
 
 msgctxt "province"
 msgid "Kars"
-msgstr ""
+msgstr "Kars"
 
 msgctxt "province"
 msgid "Kastamonu"
-msgstr ""
+msgstr "Kastamonu"
 
 msgctxt "province"
 msgid "Kayseri"
-msgstr ""
+msgstr "Kajseri"
 
 msgctxt "province"
 msgid "Kirikkale"
-msgstr ""
+msgstr "Kirikale"
 
 msgctxt "province"
 msgid "Kirklareli"
-msgstr ""
+msgstr "Kirklareli"
 
 msgctxt "province"
 msgid "Kirs'ehir"
-msgstr ""
+msgstr "Kiršehir"
 
 msgctxt "province"
 msgid "Kilis"
-msgstr ""
+msgstr "Kilis"
 
 msgctxt "province"
 msgid "Kocaeli"
-msgstr ""
+msgstr "Kodžaeli"
 
 msgctxt "province"
 msgid "Konya"
-msgstr ""
+msgstr "Konija"
 
 msgctxt "province"
 msgid "Ktahya"
-msgstr ""
+msgstr "Kutahja"
 
 msgctxt "province"
 msgid "Malatya"
-msgstr ""
+msgstr "Malatija"
 
 msgctxt "province"
 msgid "Manisa"
-msgstr ""
+msgstr "Manisa"
 
 msgctxt "province"
 msgid "Mardin"
-msgstr ""
+msgstr "Mardin"
 
 msgctxt "province"
 msgid "Mugila"
-msgstr ""
+msgstr "Mugla"
 
 msgctxt "province"
 msgid "Mus"
@@ -12869,63 +12869,63 @@ msgstr ""
 
 msgctxt "province"
 msgid "Nevs'ehir"
-msgstr ""
+msgstr "Nevšehir"
 
 msgctxt "province"
 msgid "Nigide"
-msgstr ""
+msgstr "Nigde"
 
 msgctxt "province"
 msgid "Ordu"
-msgstr ""
+msgstr "Ordu"
 
 msgctxt "province"
 msgid "Osmaniye"
-msgstr ""
+msgstr "Osmanije"
 
 msgctxt "province"
 msgid "Rize"
-msgstr ""
+msgstr "Rize"
 
 msgctxt "province"
 msgid "Sakarya"
-msgstr ""
+msgstr "Sakarija"
 
 msgctxt "province"
 msgid "Samsun"
-msgstr ""
+msgstr "Samsun"
 
 msgctxt "province"
 msgid "Siirt"
-msgstr ""
+msgstr "Sirt"
 
 msgctxt "province"
 msgid "Sinop"
-msgstr ""
+msgstr "Sinop"
 
 msgctxt "province"
 msgid "Sivas"
-msgstr ""
+msgstr "Sivas"
 
 msgctxt "province"
 msgid "S'anliurfa"
-msgstr ""
+msgstr "Šanlijurfa"
 
 msgctxt "province"
 msgid "S'rnak"
-msgstr ""
+msgstr "Širnak"
 
 msgctxt "province"
 msgid "Tekirdag"
-msgstr ""
+msgstr "Tekirdag"
 
 msgctxt "province"
 msgid "Tokat"
-msgstr ""
+msgstr "Tokat"
 
 msgctxt "province"
 msgid "Trabzon"
-msgstr ""
+msgstr "Trabzon"
 
 msgctxt "province"
 msgid "Tunceli"
@@ -12941,15 +12941,15 @@ msgstr ""
 
 msgctxt "province"
 msgid "Yalova"
-msgstr ""
+msgstr "Jalova"
 
 msgctxt "province"
 msgid "Yozgat"
-msgstr ""
+msgstr "Jozgat"
 
 msgctxt "province"
 msgid "Zonguldak"
-msgstr ""
+msgstr "Zonguldak"
 
 msgctxt "province"
 msgid "Couva-Tabaquite-Talparo"
