--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -47,7 +47,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-17 17:36+0000\n"
+"PO-Revision-Date: 2017-01-24 09:25+0000\n"
 "Last-Translator: Brodziak jean jacques <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -1368,7 +1368,7 @@ msgstr "Un fichier valide doit être transféré vers le serveur."
 #: CRM/Activity/Import/Form/DataSource.php
 #: CRM/Custom/Import/Form/DataSource.php CRM/Import/DataSource/CSV.php
 msgid "Input file must be in CSV format"
-msgstr "Le fichier à importer doit être dans le format CSV"
+msgstr "Le fichier à importer doit être au format CSV"
 
 #: CRM/Activity/Import/Form/DataSource.php
 #: CRM/Custom/Import/Form/DataSource.php CRM/Import/DataSource/CSV.php
@@ -1822,7 +1822,7 @@ msgstr "Prénom"
 #: CRM/Contact/BAO/Contact/Utils.php CRM/Contact/DAO/Contact.php
 #: CRM/Contact/Form/Edit/Individual.php xml/templates/civicrm_data.tpl
 msgid "Middle Name"
-msgstr "Autres prénoms"
+msgstr "Autre prénom"
 
 #: CRM/Contact/BAO/Contact/Utils.php CRM/Contact/DAO/Contact.php
 #: CRM/Contact/Form/Edit/Individual.php
@@ -2962,7 +2962,7 @@ msgstr "Enregistrer le contact correspondant"
 
 #: CRM/Contact/Form/Contact.php
 msgid "Save With Duplicate Household"
-msgstr "Sauvegarder come foyer en double"
+msgstr "Sauvegarder comme foyer en double"
 
 #: CRM/Contact/Form/Contact.php CRM/Contact/Form/CustomData.php
 #: CRM/Custom/Form/Field.php CRM/Custom/Form/Option.php
